@@ -157,9 +157,9 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
         {
             try
             {
-                return endpointClass.newInstance();
+                return endpointClass.getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException | IllegalAccessException e)
+            catch (Exception e)
             {
                 throw new WebSocketException("Unable to create instance of " + endpointClass.getName(), e);
             }
